--- a/assets/style.css
+++ b/assets/style.css
@@ -18,6 +18,7 @@ body {
 /* styling the header */
 header {
     background: var(--light);
+    background: linear-gradient(90deg,var(--light) 0%,var(--blue) 35%,var(--light) 100%);
     padding: 2%;
     color:rgb(104, 104, 212);
     
@@ -101,6 +102,7 @@ section {
 
 .content {
     background:rgb(231, 213, 213);
+    background: linear-gradient(90deg,rgb(231, 213, 213) 0%,rgb(228, 198, 198) 35%,rgb(231, 213, 213) 100%);
     padding: 20px;
     width: 100%;
     flex-grow: 1 1 1;
@@ -108,7 +110,6 @@ section {
 
 .subcontent {
     margin: 10px;
-    padding: 10p;
 }
 
 /* Styling the headers within the content class */
@@ -126,8 +127,8 @@ section {
     max-width: 75%;
     margin-left: 20px;
     padding: 5px;
-    color:var(--dark);
-    font-size: 110%
+    color:var(--light);
+    font-size: 150%
 }
  /* styling class two of main */
 .two {
@@ -190,30 +191,47 @@ section {
     display: inline;
     margin-top: 20px;
     margin-left: 0px;
-    padding: 1px 1px 5px 1px;
-    font-size: 120%;
+    padding: 1px 1px 1px 1px;
+    font-size: 150%;
 }
 
 .contact a {
     text-decoration: underline;
     padding: 5px;
-    margin-left: 20px;
-    margin-bottom: 20px;
-    flex-shrink: 3;
+    margin-left: 5px;
+    margin-bottom: 20%;
+    flex-shrink: 3 0 0;
     display: inline;
     padding-left: 0px;
     color:rgb(47, 42, 56);
     align-content: center;
 }
 
+.contact a:hover {
+    color:rgb(115, 112, 134);
+}
+
 .email::before {
-    content: '\1F4E7'
+    content: '\1F4E7';
+    margin-left: 10px;
 }
 .tel::before {
-    content: '\260E'
+    content: '\260E';
+    margin-left: 10px;
 }
 .git::before {
-    content: '\1F4BB'
+    content: '\1F4BB';
+    margin-left: 10px;
+}
+
+.footer {
+    color:rgb(47, 42, 56);
+    text-align: center;
+    font-size: 150%;
+}
+
+.footer::after {
+    content: ' \2714'
 }
 
 /* creating styling changes for smaller screens */
@@ -225,14 +243,15 @@ section {
         background-size: cover;
         opacity: 75%;
         height: 300px;
-        min-width: 250px;
+        min-width: 230px;
         align-items: flex-end;
     }
     .workone {
-        min-width: 400px;
+        min-width: 230px;
     }
+
 }
-@media screen and (max-width: 950px) {
+@media screen and (max-width: 980px) {
     header nav ul {
         display: block;
     }
@@ -272,8 +291,11 @@ section {
 
     .workcontent {
         display: flex;
-        width: 50%;
+        width: 45%;
         flex-flow: column wrap;
+    }
+    .workone {
+        min-width: 93%;
     }
 
 }
@@ -317,6 +339,15 @@ section {
     .content ul li {
         display: block;
         padding-bottom: 10px;
+    }
+    
+    .workcontent {
+        display: flex;
+        width: 100%;
+        flex-flow: column wrap;
+    }
+    .workone {
+        min-width: 100%;
     }
 
 }
