adding some extra styling and a footer

--- a/assets/style.css
+++ b/assets/style.css
@@ -305,9 +305,21 @@ section {
         display: block;
         align-content: center;
     }
+    header h1 {
+        display: block;
+        text-align: center;
+        align-content: center;
+    }
     .nav {
         display: block;
         width: 100%
+    }
+    .image {
+        height: 200px;
+    }
+    .image p {
+        margin-left: 5px;
+        font-size: 100%
     }
     main {
       display: block;
@@ -330,24 +342,41 @@ section {
         width: 100%;
         display: block;
         align-items: center
-    }
+    } 
 
     .content ul {
         display:block;
-        padding: 10px
+        padding: 5px
     }
     .content ul li {
         display: block;
         padding-bottom: 10px;
+        font-size: 100%;
     }
     
     .workcontent {
         display: flex;
-        width: 100%;
+        width: 93%;
         flex-flow: column wrap;
     }
     .workone {
-        min-width: 100%;
+        min-width: 93%;
     }
 
 }
+
+/* creating responsive design or smaller phone screens */
+@media screen and (max-width: 290px) {
+    .content p {
+        font-size: 90%;
+    }
+    
+    .contact a {
+        font-size: 90%;
+        padding: 0px;
+    }
+    .footer {
+        font-size: 100%;
+    }
+}
+
