--- a/assets/style.css
+++ b/assets/style.css
@@ -17,8 +17,8 @@ body {
 
 /* styling the header */
 header {
-    background: var(--light);
-    background: linear-gradient(90deg,var(--light) 0%,var(--light) 35%,var(--light) 100%);
+    background: rgba(255, 255, 255, 0.904);
+    /* background: var(--light); */
     padding: 2%;
     color:rgb(104, 104, 212);
     
@@ -56,18 +56,18 @@ header nav ul {
     padding: 0.2% 1% 0.2% 1%;
     border:solid rgb(170, 167, 196);
     border-radius: 10px;
-    background:rgb(231, 213, 213);
+    background:rgba(221, 218, 218, 0.925);
     font-size: 200%;
 }
 
 .nav:hover {
-    box-shadow: inset 3px 2px rosybrown;
-    background:rgb(241, 193, 193);
+    box-shadow: inset 3px 2px rgb(221, 182, 182);
+    background:rgb(245, 222, 222);
     color: var(--blue)
 }
 
 .nav a {
-    color:rgb(47, 42, 56);
+    color:rgb(148, 139, 161);
     text-decoration: none;
     font-family:Arial, Helvetica, sans-serif;
 }
@@ -78,6 +78,8 @@ header nav ul {
     height: 400px;
     width: 100%;
     background-image: url('./images/view.jpg');
+    opacity: 75%;
+    border:solid rgb(170, 167, 196);
     background-size: cover;
     background-position: center;
 }
@@ -102,8 +104,8 @@ section {
 }
 
 .content {
-    background:rgb(231, 213, 213);
-    background: linear-gradient(90deg,rgb(231, 213, 213) 0%,rgb(228, 198, 198) 35%,rgb(231, 213, 213) 100%);
+    background:rgba(255, 255, 255, 0.904);
+    /* background: linear-gradient(90deg,rgb(231, 213, 213) 0%,rgb(228, 198, 198) 35%,rgb(231, 213, 213) 100%); */
     padding: 20px;
     width: 100%;
     flex-grow: 1 1 1;
@@ -121,7 +123,8 @@ section {
     text-align: right;
     margin: 10px;
     padding: 20px;
-    border-right: solid rgb(47, 42, 56);
+    color: rgb(134, 129, 143);
+    border-right: solid rgb(134, 129, 143);
 }
  /* styling p tags in content classs */
 .content p {
@@ -226,7 +229,7 @@ section {
 }
 
 .footer {
-    color:rgb(47, 42, 56);
+    color:rgb(134, 129, 143);
     text-align: center;
     font-size: 150%;
 }
@@ -273,7 +276,7 @@ section {
     .content h2 {
         display: block;
         border-right: none;
-        border-bottom: solid black;
+        border-bottom: solid rgb(134, 129, 143);
         width: 100%;
         text-align: center;
         margin-left: 0px;
@@ -336,7 +339,7 @@ section {
     .content h2 {
         display: block;
         border-right: none;
-        border-bottom: solid black;
+        border-bottom: solid rgb(134, 129, 143);
         width: 100%;
         align-content:center;
         text-align: center;
